# mpc-drum-machine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
Source/: AbletonImporter.cpp  AbletonImporter.h  DrumKitLibrary.cpp  DrumKitLibrary.h  LookAndFeel.h  MidiMapper.cpp  MidiMapper.h  PadComponent.cpp  PadComponent.h  PadMappingManager.cpp  PadMappingManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetListComponent.cpp  PresetListComponent.h  PresetManager.cpp  PresetManager.h  SampleEngine.cpp  SampleEngine.h
installer/: create_installer.sh  distribution.xml  uninstall.sh
installer/resources/: readme.html  welcome.html
installer/windows/: beatwerk.iss  create_installer.ps1
